feat: implement standardized behavior catalog